--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -95,6 +95,7 @@ $font-size-lg:   3rem !default;
 $font-size-md:   1.25rem !default;
 $font-size-sm:   .9rem !default;
 $font-size-xs:   .8rem !default;
+$font-size-xxs:   .75rem !default;
 
 $text-large: 1.45rem;
 $product-title: 1.25rem;
@@ -148,7 +149,7 @@ $btn-primary-bg:                 $brand-primary !default;
 $btn-primary-border:             $btn-primary-bg !default;
 
 $btn-secondary-color:            #fff !default;
-$btn-secondary-bg:               $gray-dark !default;
+$btn-secondary-bg:               $black !default;
 $btn-secondary-border:           $btn-secondary-bg !default;
 
 $btn-tertiary-color:             #fff !default;
