--- a/src/assets/scss/components/titles/_titles.scss
+++ b/src/assets/scss/components/titles/_titles.scss
@@ -24,12 +24,14 @@
 
   &--medium {
     font-size: $font-size-md;
+    font-family: $pf-light;
   }
 
   &--small {
     font-size: $font-size-sm;
     font-family: $pf-light;
     color: $gray-lighter;
+    letter-spacing: 1px;
   }
 
   &--block {
