--- a/src/assets/scss/components/typography/_typography.scss
+++ b/src/assets/scss/components/typography/_typography.scss
@@ -19,6 +19,10 @@
   &--extra-small {
     font-size: $font-size-xs;
   }
+  &--extra-extra-small {
+    font-size: $font-size-xxs;
+  }
+
 
   &--label {
     font-size: $contact-title;
