--- a/src/assets/scss/base/_see-the-difference.scss
+++ b/src/assets/scss/base/_see-the-difference.scss
@@ -3,8 +3,8 @@ $button-light: #b3b3b3;
 
 // Tabs
 ul.tabs{
-	margin: 0px;
-	padding: 0px;
+	margin: 0;
+	padding: 0 0 2rem 0;
 	list-style: none;
 }
 
@@ -153,7 +153,7 @@ ul.tabs li.current{
 }
 .cd-handle.draggable {
   /* change background color when element is active */
-  background-color: #445b7c;
+  background-color: #4d4d4d;
 }
 .is-visible .cd-handle {
   opacity: 1;
