--- a/src/assets/scss/hamburgers/_sass/hamburgers/_base.scss
+++ b/src/assets/scss/hamburgers/_sass/hamburgers/_base.scss
@@ -30,6 +30,7 @@
     }
   }
 }
+
 .hamburger-label {
   color: $hamburger-layer-color;
   line-height: $hamburger-layer-height * 3 + $hamburger-layer-spacing * 2;
@@ -40,7 +41,11 @@
   .is-dark & {
     color: $hamburger-layer-color-dark;
   }
+  .is-active.is-dark & {
+    color: $hamburger-layer-color;
+  }
 }
+
 .hamburger-box {
   width: $hamburger-layer-width;
   height: $hamburger-layer-height * 3 + $hamburger-layer-spacing * 2;
@@ -66,6 +71,9 @@
     transition-timing-function: ease;
     .is-dark & {
       background-color: $hamburger-layer-color-dark;
+    }
+    .is-active.is-dark & {
+      background-color: $hamburger-layer-color;
     }
   }
 
