--- a/src/assets/scss/components/video/_video.scss
+++ b/src/assets/scss/components/video/_video.scss
@@ -1,11 +1,13 @@
 .video {
   @extend .text--light-colored;
   width: 100%;
-  height: 90%;
   position: relative;
   overflow: hidden;
+  @include media-breakpoint-up(md) {
+    min-height: 90%;
+  }
 
-  @include media-breakpoint-up(sm) {
+  @include media-breakpoint-up(md) {
     &__content {
       @include vertically-centered();
       top: 32%;
@@ -21,6 +23,19 @@
     @media only screen and (min-width:0) and (max-width: $container-medium)  {
       padding-left: 5%;
       padding-right: 5%;
+    }
+  }
+  @include media-breakpoint-down(sm) {
+    &__content {
+      position: relative;
+      z-index: 3;
+      opacity: 0;
+      transition: opacity .4s;
+      padding-top: 6rem;
+      padding-bottom: 2rem;
+      &.is-loaded {
+        opacity: 1;
+      }
     }
   }
 
