--- a/src/_includes/crown/silver-gold.html
+++ b/src/_includes/crown/silver-gold.html
@@ -32,6 +32,7 @@
   </div>
 </div>
 
+<script src="{{site.url}}/assets/javascript/vendors/jquery.mobile.custom.min.js"></script>
 <!-- Adding inline script --->
 <script>
 jQuery(document).ready(function($){
