--- a/src/_includes/video.html
+++ b/src/_includes/video.html
@@ -13,14 +13,21 @@
         <h1 class="title">{{ video.title }}</h1>
         <h2 class="text">{{ video.subtitle }}</h2>
         {% if video.WatchFullVideo == true %}
-          <a class="video__watch-full-video" href="{{video.FullVideoURL}}"><i class="fa fa-play-circle" aria-hidden="true"></i>
+          <a class="video__watch-full-video" href="{{video.FullVideoURL}}">
+            <svg class="play-button" version="1.1" xmlns="http://www.w3.org/2000/svg" x="0" y="0" width="42" height="42" viewBox="0 0 42 42" enable-background="new 0 0 42 42" xml:space="preserve">
+              <path fill="#FFFFFF" d="M21 0.8C9.9 0.8 0.8 9.9 0.8 21c0 11.1 9 20.2 20.2 20.2 11.1 0 20.2-9 20.2-20.2C41.2 9.9 32.1 0.8 21 0.8zM17 29.1V12.9L28.5 21 17 29.1z"/>
+            </svg><br/>
     {{video.WatchVideoLinkText}}</a>
         {% endif %}
       </div>
-      <svg version="1.1" xmlns="http://www.w3.org/2000/svg" x="0" y="0" width="24" height="52" viewBox="0 0 24 52" enable-background="new 0 0 24 52" xml:space="preserve" class="scroll-down">
-        <path class="scroll-down__mouse" fill="none" d="M134.5 135.5v2c1.1-1.5 1.8-3.4 1.8-5.5v-18.6c0-5.1-4.2-9.3-9.3-9.3 -5.1 0-9.3 4.2-9.3 9.3v18.6c0 2.1 0.7 4 1.8 5.5v-2H134.5zM125.7 109.3c0-0.7 0.6-1.3 1.3-1.3 0.7 0 1.3 0.6 1.3 1.3v6.7c0 0.7-0.6 1.3-1.3 1.3 -0.7 0-1.3-0.6-1.3-1.3V109.3zM127 117.3c0.7 0 1.3-0.6 1.3-1.3v-6.7c0-0.7-0.6-1.3-1.3-1.3 -0.7 0-1.3 0.6-1.3 1.3v6.7C125.7 116.7 126.3 117.3 127 117.3zM127 101.4c-6.6 0-12 5.4-12 12v18.6c0 3.8 1.8 7.1 4.5 9.3v-3.8c-1.1-1.5-1.8-3.5-1.8-5.5v-18.6c0-5.1 4.2-9.3 9.3-9.3 5.1 0 9.3 4.2 9.3 9.3v18.6c0 2.1-0.7 4-1.8 5.5v3.8c2.7-2.2 4.5-5.6 4.5-9.3v-18.6C139 106.7 133.6 101.4 127 101.4z"/>
-        <polygon class="scroll-down__arrow" fill="#FFFFFF" stroke="#FFFFFF" points="132.2 147.5 127.2 152.5 127.2 142.1 126.8 142.1 126.8 152.5 121.8 147.5 121.4 147.8 126.7 153 127 153.4 127.3 153 132.6 147.8 "/>
-      </svg>
+      <div class="scroll-down">
+        <svg class="scroll-down__svg" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0" y="0" width="24" height="54" viewBox="0 0 24 54" enable-background="new 0 0 24 54" xml:space="preserve">
+          <path class="scroll-down__mouse" fill="#FFFFFF" d="M12 16.97c0.73 0 1.33-0.59 1.33-1.32V8.99c0-0.73-0.59-1.33-1.32-1.33 -0.73 0-1.33 0.6-1.33 1.33v6.66C10.67 16.38 11.27 16.97 12 16.97z"/>
+          <path class="scroll-down__mouse" fill="#FFFFFF" d="M12 1C5.39 1 0.02 6.36 0.02 12.98v18.63c0 3.78 1.75 7.14 4.49 9.34v-3.81c-1.14-1.55-1.82-3.45-1.82-5.52V12.98c0-5.15 4.17-9.32 9.32-9.32 5.14 0 9.31 4.17 9.31 9.32v18.63c0 2.07-0.68 3.97-1.82 5.52v3.82c2.73-2.19 4.49-5.56 4.49-9.34V12.98C23.98 6.36 18.62 1 12 1z"/>
+          <polygon class="scroll-down__arrow" fill="#FFFFFF" stroke="#FFFFFF" points="17.25 47.12 12.23 52.14 12.23 41.76 11.78 41.76 11.78 52.14 6.75 47.12 6.44 47.44 11.68 52.68 12 53 12.32 52.68 17.57 47.44 "/>
+        </svg>
+        <div class="scroll-down__text">Scroll Down</div>
+      </div>
   </div>
 </div>
 
