--- a/src/assets/scss/base/_see-the-difference.scss
+++ b/src/assets/scss/base/_see-the-difference.scss
@@ -54,7 +54,7 @@ ul.tabs li.current{
 
 .cd-image-label {
   position: absolute;
-  top: 80%;
+  top: 84%;
   right: 0;
   opacity: 0;
   transform: translateY(20px);
@@ -64,6 +64,11 @@ ul.tabs li.current{
 .cd-image-label div {
 	margin: 0;
 }
+
+.cd-image-label .title--medium {
+	line-height: 1.3rem;
+}
+
 .cd-image-label.is-hidden {
   visibility: hidden;
 }
