--- a/src/assets/scss/components/footer/_footer.scss
+++ b/src/assets/scss/components/footer/_footer.scss
@@ -3,6 +3,19 @@
   padding-top:5rem;
   @include media-breakpoint-down(sm) {
     padding-top:3rem;
+    .container {
+      padding-left: $gutter-percentage;
+      padding-right: $gutter-percentage;
+      width: 100%;
+      .row {
+        margin-left: 0;
+        margin-right: 0;
+        .footer__item {
+          padding-left: 0;
+          padding-right: 0;
+        }
+      }
+    }
   }
 
   &.on-dark-color .title {
@@ -10,6 +23,7 @@
   }
 
   &__item {
+
     @include media-breakpoint-down(lg) {
       margin-bottom: 1.5rem;
     }
