--- a/src/assets/scss/components/form/_forms.scss
+++ b/src/assets/scss/components/form/_forms.scss
@@ -4,11 +4,22 @@ input,
 button {
   outline: none;
 }
+.form-response__container {
+  @include media-breakpoint-down(sm) {
+    padding-left: $gutter-percentage;
+    padding-right: $gutter-percentage;
+  }
+}
+
+
 
 form {
   //@extend %layout-center;
   @include clearfix();
   @include section-padding-top(3);
+  max-width: $content-wrapper-max-width;
+  margin-left: auto;
+  margin-right: auto;
   span.error {
     position: absolute;
     color: $white;
@@ -29,6 +40,10 @@ form {
   @include media-breakpoint-down(sm) {
     width: 100%;
     float: none;
+    padding: 0;
+    span.error {
+      left: 0;
+    }
   }
 
 
@@ -87,6 +102,6 @@ label {
 
 .form-submit {}
 
-#form-response {  
+#form-response {
 
 }
