--- a/src/assets/scss/components/menu/_menu.scss
+++ b/src/assets/scss/components/menu/_menu.scss
@@ -1,9 +1,10 @@
 // Navigation open or close state
 #navigation{
-  width: 0%;
+  width: 100%;
+  transform: translateX(-100%);
 
   &.is-enabled {
-    width: 100%;
+    transform: translateX(0);
   }
   ul,li {
     list-style: none;
@@ -34,10 +35,17 @@
 .overlay-content {
     @include vertically-centered();
     text-align: center;
+    margin: 0;
+    padding-left: $gutter-percentage;
+    padding-right: $gutter-percentage;
     ul,li {
       list-style: none;
       margin: 0;
       padding: 0;
+    }
+    li {
+      padding-top: .3em;
+      padding-bottom: .3em;
     }
 }
 
@@ -45,6 +53,7 @@
     padding: 0;
     text-decoration: none;
     font-size: 43px;
+    line-height: 1.3;
     color: $white;
     display: block;
     transition: 0.3s;
