--- a/src/_includes/section-crown-corks.html
+++ b/src/_includes/section-crown-corks.html
@@ -1,7 +1,7 @@
 {% assign node = include.param %}
-<div class="section {{ node.variantClasses }} {{ node.layout }} clearfix" id="{{node.id}}" {% unless node.id == "exterior-side" %}{% if(node.bgImage) %}style="background-image:url({{ node.bgImage }}); background-position: {{ node.bgImagePosition }}; background-size: {{ node.bgImageSize }};"{% endif %}{% endunless %}>
+<div class="section js-animate--canvas {{ node.variantClasses }} {{ node.layout }} clearfix" id="{{node.id}}" {% unless node.id == "exterior-side" %}{% if(node.bgImage) %}style="background-image:url({{ node.bgImage }}); background-position: {{ node.bgImagePosition }}; background-size: {{ node.bgImageSize }};"{% endif %}{% endunless %}>
   <div class="content-container">
-    <div class="column">
+    <div class="column js-waypoint-image--canvas">
       {% if node.includeArea %}
         {% include {{ node.includeArea }} %}
       {% endif %}
@@ -12,7 +12,7 @@
       {% endif %}
 
       {% if node.image %}
-        <div class="js-waypoint-image">
+        <div class="">
           <div class="image"><img class="img-fluid" src="{{ node.image }}"></div>
         </div>
       {% endif %}
