Refining css and js animations

--- a/src/_includes/crown/anatomy.html
+++ b/src/_includes/crown/anatomy.html
@@ -50,4 +50,4 @@
 	}
 })();
 </script>
-<canvas id="anatomy-canvas" class="canvas-animation" width="540" height="564" style=""></canvas>
+<canvas id="anatomy-canvas" class="canvas-animation js-waypoint-image--canvas" width="540" height="564" style=""></canvas>
