--- a/src/assets/scss/base/_misc.scss
+++ b/src/assets/scss/base/_misc.scss
@@ -344,3 +344,10 @@ body {
     }
   }
 }
+
+@media only screen and (min-width:0) and (max-width: $container-medium) {
+  #leader .carousel {
+    margin-left: -$gutter-percentage;
+    margin-right: -$gutter-percentage;
+  }
+}
