--- a/src/assets/scss/components/video/_video.scss
+++ b/src/assets/scss/components/video/_video.scss
@@ -71,6 +71,7 @@
     &.is-loaded {
       display: none !important;
       z-index: -10;
+      opacity: 0;
     }
     .no-videoautoplay &{
       display: block !important;
