--- a/src/assets/scss/components/menu/_menu.scss
+++ b/src/assets/scss/components/menu/_menu.scss
@@ -46,6 +46,10 @@
     li {
       padding-top: .3em;
       padding-bottom: .3em;
+      @media screen and ( max-height: 480px ){
+        padding-top: 0;
+        padding-bottom: 0;
+      }
     }
 }
 
